Solving problems with compiling in kubuntu